--- a/index.html
+++ b/index.html
@@ -8,12 +8,35 @@
     <meta property="og:title" content="название">
     <meta property="og:description" content="текст">
     <meta property="og:image" content="{картинка}">
+    <link href="./stylesheets/fonts.css" rel="stylesheet" type="text/css"/>
     <title>Шаблон</title>
       <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
       <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
       <script src="javascripts/java-script.js" charset="utf-8"></script>
   </head>
   <body>
-    <p> Это удобный шаблон для начала написания кода - 💕 </p>
+  <div class="runLine">
+    <img src="./img/runLine.svg" class="runLineImg">
+  </div>
+  <div class="workspaceOne">
+    <div class="logoDiv">
+      <img class="logoImg" src="./img/logo.svg" alt="logo">
+    </div>
+    <div class="linkContainer">
+      <img src="./img/vk.svg" class="vkLogo" alt="vk">
+      <img src="./img/linkArrow.svg" class="linkArrow" alt="arrow">
+      <a href="https://portfolio.hse.ru/Student/17664"><p class="linkPortfolio">ссылка на портфолио</p></a>
+    </div>
+    <h1 class="title">мы приносим в жизнь людей больше<br>цвета самым неожиданным образом</h1>
+    <p class="radugaDesc">необычный солярий «радуга»</p>
+    <nav class="navBlock">
+      <a>о нас</a>
+      <a>загореть</a>
+      <a>товары</a>
+      <a>события</a>
+    </nav>
+
+  </div>
+
   </body>
 </html>
