--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:title" content="название">
     <meta property="og:description" content="текст">
     <meta property="og:image" content="{картинка}">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./stylesheets/fonts.css" rel="stylesheet" type="text/css"/>
     <title>Шаблон</title>
       <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
