--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
   <div class="runLine">
-    <img src="./img/runLine.svg" class="runLineImg">
+    <img src="./img/rLine.svg" class="runLineImg">
   </div>
   <div class="workspaceOne">
     <div class="logoDiv">
@@ -31,10 +31,10 @@
     <h1 class="title">мы приносим в жизнь людей больше<br>цвета самым неожиданным образом</h1>
     <p class="radugaDesc">необычный солярий «радуга»</p>
     <nav class="navBlock">
-      <a>о нас</a>
-      <a>загореть</a>
-      <a>товары</a>
-      <a>события</a>
+      <p class="aboutLink">о нас</p>
+      <p class="tanLink">загореть</p>
+      <p class="shopLink">товары</p>
+      <p class="eventsLink">события</p>
     </nav>
 
   </div>
