--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="{картинка}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./stylesheets/fonts.css" rel="stylesheet" type="text/css"/>
-    <title>Шаблон</title>
+    <title>Радуга</title>
       <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
       <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
       <script src="javascripts/java-script.js" charset="utf-8"></script>
