--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,7 @@
     <meta property="og:title" content="название">
     <meta property="og:description" content="текст">
     <meta property="og:image" content="{картинка}">
-    <title>Шаблон</title>
+    <title>Товары</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
     <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
     <script src="javascripts/java-script.js" charset="utf-8"></script>
@@ -17,6 +17,8 @@
 
     <div class="workspaceOne">
        <p class="bin">корзина / 0</p>
+        <p class="itemName">название</p>
+        <p class="itemPrice">0₽</p>
         <nav class="navBlock">
             <p class="aboutLink">о нас</p>
             <p class="tanLink">загореть</p>
