UPD: picker 1 option working

--- a/tanPage.html
+++ b/tanPage.html
@@ -10,10 +10,11 @@
     <meta property="og:image" content="{картинка}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="./stylesheets/fonts.css" rel="stylesheet" type="text/css"/>
-    <title>Радуга</title>
+    <title>загореть</title>
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
     <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
     <script src="javascripts/java-script.js" charset="utf-8"></script>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <style>
         .workspaceOne {
             padding-left: 5.2vw;
@@ -28,7 +29,11 @@
     </style>
 </head>
 <body>
+<div class="scheduledDiv">
+    <img class="scheduled" src="img/scheduled.svg" alt="">
+</div>
 <div class="workspaceOne">
+    <p class="pickedColor">цвет</p>
     <nav class="navBlock">
         <p class="aboutLink">о нас</p>
         <p class="tanLink">загореть</p>
@@ -42,6 +47,21 @@
         <img src="./img/greenT.svg" class="greenT" alt="">
         <img src="./img/yellowT.svg" class="yellowT" alt="">
     </div>
+
+    <div class="request">
+        <div class="fill">
+            <input class="inputData" type="text" name="" value="" placeholder="Имя">
+            <input class="inputData" type="text" name="" value="" placeholder="Тел. номер">
+            <input class="inputData" type="text" name="" value="" placeholder="Дата визита">
+        </div>
+        <p class="sendButton">отправить</p>
+    </div>
+
+
+
+
+
+
 </div>
 
 
