--- a/shop.html
+++ b/shop.html
@@ -8,7 +8,8 @@
     <meta property="og:title" content="название">
     <meta property="og:description" content="текст">
     <meta property="og:image" content="{картинка}">
-    <title>Товары</title>
+    <title>товары</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
     <link href="./stylesheets/style.css" rel="stylesheet" type="text/css"/>
     <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
     <script src="javascripts/java-script.js" charset="utf-8"></script>
