UPD: bagPage done

--- a/shop.html
+++ b/shop.html
@@ -17,7 +17,7 @@
 <body class="shopPage">
 
     <div class="workspaceOne">
-       <p class="bin">корзина / 0</p>
+       <p class="cart">корзина / 0</p>
         <p class="itemName">название</p>
         <p class="itemPrice">0₽</p>
         <nav class="navBlock">
