UPD : seems done

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <script src="javascripts/java-script.js" charset="utf-8"></script>
   </head>
   <body>
+  <p class="rotateMessage">переверните<br>устройство</p>
   <div class="runLine">
     <img src="./img/rLine.svg" class="runLineImg">
   </div>
