--- a/shop.html
+++ b/shop.html
@@ -19,7 +19,7 @@
     <div class="workspaceOne">
        <p class="cart">корзина / 0</p>
         <p class="itemName">название</p>
-        <p class="itemPrice">0₽</p>
+        <p class="itemPrice">0р</p>
         <nav class="navBlock">
             <p class="aboutLink">о нас</p>
             <p class="tanLink">загореть</p>
