UPD: Arrow fixed

--- a/tanPage.html
+++ b/tanPage.html
@@ -40,7 +40,7 @@
         <p class="shopLink">товары</p>
         <p class="eventsLink">события</p>
     </nav>
-    <p class="radugaDesc" style="margin-top: 0; top: 29vh; ">выберите желаемый цвет загара  –>  введите личные данные  –>  отправьте форму и ждите нашего звонка</p>
+    <p class="radugaDesc" style="margin-top: 0; top: 29vh; ">выберите желаемый цвет загара  →  введите личные данные  →  отправьте форму и ждите нашего звонка</p>
     <div class="picker">
         <img src="./img/purpleT.svg" class="purpleT" alt="">
         <img src="./img/redT.svg" class="redT" alt="">
